SF Primes/src/objects/IMP_Market__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to retrieve Market logo and important notice image</description>
    <fields>
        <fullName>Logo__c</fullName>
        <description>Full document/file path to find the Market’s logo</description>
        <label>Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notice__c</fullName>
        <description>Full document/file path to find the Market’s important notice image</description>
        <label>Notice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IMP_Market</label>
</CustomObject>